# video-compariso-rag-pipeline-with-gpu

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  rag_pipeline_poc.py
app/: config.py  schemas.py  security.py
app/routers/: ingest.py  retrieve.py
app/services/: chunking.py  embeddings.py  logger.py  reranker.py  sparse.py  vector_store.py  youtube.py
notebooks/: test_endpoints.ipynb
