[project]
name = "video-comparison-rag-with-gpu"
version = "0.1.0"
description = "GPU-side retrieval + inference layer for the multi-agentic YouTube RAG system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.1,<1.0.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "requests==2.32.5",
    "youtube-transcript-api==1.2.4",
    "yt-dlp==2026.3.17",
    "qdrant-client==1.18.0",
    "sentence-transformers==5.4.1",
    "langchain==1.2.15",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.2",
    "torch==2.10.0+cu128",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
